# JCAT-Game-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  envUnixTemplate.cmake  envWindowsTemplate.cmake  mingwBuild.bat  unixBuild.sh
docs/game-engine-documentation/: Drawing_Images.md  Graphics-Pipeline_setup.md  Swap_Chain.md
docs/milestone-documentation-Caleb/: 1-21-25.txt  caleb-milestones.txt
docs/milestone-documentation-Christian/: 1-21-25.txt
docs/milestone-documentation-Jack/: Jan_21_2025.txt
docs/milestones-christian/: Initial_Setup.md
docs/project-setup/: LinuxSetup.md  MacSetup.md  WindowsSetup.md
models/: note.txt
shaders/: simpleShader3D.frag  simpleShader3D.vert
source/: application.cpp  application.h  application.hpp  deviceSetup.cpp  deviceSetup.h  graphicsPipeline.cpp  graphicsPipeline.h  main.cpp  resourceManager.cpp  resourceManager.h  window.cpp  window.h  window.hpp
source/appCore/: keyboardController.cpp  keyboardController.h
source/apps/default/: application.cpp
source/apps/default/2d/: application.cpp  application.h  applicationRenderer.cpp  applicationRenderer.h
source/apps/default/3d/: application3D.cpp  application3D.h  application3DRenderer.cpp  application3DRenderer.h  perlinNoise3D.h  perlineNoise3D.cpp
source/engine/: buffer.h  descriptors.h  deviceSetup.cpp  deviceSetup.h  frameInfo.h  graphicsPipeline.cpp  graphicsPipeline.h  renderer.h  resourceManager.cpp  resourceManager.h  swapChain.cpp  swapChain.h  texture.h  utils.h  window.cpp  window.h
source/engine/2D/: camera2D.h  gameSprite.cpp  gameSprite.h  model2d.cpp  model2d.h
source/engine/2d/: camera2D.h  gameSprite.h  model2d.h
source/engine/2d/src/: camera2D.cpp  gameSprite.cpp  model2d.cpp
source/engine/3D/: gameObject.cpp  gameObject.h  model3d.cpp  model3d.h
source/engine/3d/: camera3D.h  gameObject.h  model3d.h
source/engine/3d/src/: camera3D.cpp  gameObject.cpp  model3d.cpp
source/engine/src/: buffer.cpp  buffer.h  descriptors.cpp  deviceSetup.cpp  graphicsPipeline.cpp  renderer.cpp  resourceManager.cpp  swapChain.cpp  texture.cpp  window.cpp
source/engine/threeD/: model3d.cpp  model3d.h
source/engine/twoD/: model2d.cpp  model2d.h
textures/: note.txt
